# ARA-Networks

./: .gitignore  README.md
src/: 0-fetch.py  1-convert.sh  1-fsrecon.sh  2-fsconvert.sh  2-preprocess.sh  3-preprocess.sh  4-register.sh  5-mic.sh  6-matrices.sh  CMakeLists.txt  build.sh  check.sh  convert.py  create_metadata.py  matrices.sh  mic.sh  preprocess.sh  register.sh  regress.py  roi-extract.cxx  setup-python.py  subject_metadata.txt
src/avg/: 5-mic.sh  6-matrices.sh  matrices.sh  mic.sh
src/pca/: 5-pca.sh  6-mic.sh  7-matrices.sh  matrices.sh  mic.sh  pca.sh
src/vul/: CMakeLists.txt
